--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,13 @@
 [
 	{
+		"version": "1.0.1",
+		"downloadUrl": "https://github.com/WilliamIsted/Craft-SimpleCache/archive/1.0.1.zip",
+		"date": "2017-03-01T11:07:00-00:00",
+		"notes": [
+			"[Improved] Added documentation url.",
+		]
+	},
+	{
 		"version": "1.0.0",
 		"downloadUrl": "https://github.com/WilliamIsted/Craft-SimpleCache/archive/1.0.0.zip",
 		"date": "2016-09-07T13:23:00-00:00",
